--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             <section class="account">
                 <section class="input">
                     <h1>Let's set up your account</h1>
-                    <span>Already have an account? <span class="input-sign-in">Sign in</span></span>
+                    <div class="haveAccount">Already have an account? <a href="#" class="input-sign-in">Sign in</a></div>
                     <form action="/">
                         <input type="text" id="name" name="name" placeholder="Your name"><br>
                         <input type="text" id="name" name="name" placeholder="Email address"><br>
@@ -24,15 +24,17 @@
                             <option value="audi">Audi</option>
                           </select><br>                      
                         <input type="password" id="password" name="password" placeholder="Password"><br>
-                        <span>Minimum 8 characters</span><br>
-                        <input type="submit" value="Submit"><br>
-                        <span>By clicking the "Next" button, you agree to creating a free account, and to <span class="input-sign-in">Terms of Service</span> and <span class="input-sign-in">Privacy Policy</span></span>
+                        <span class="small">Minimum 8 characters</span><br>
+                        <input type="submit" value="Next"><br>
+                        <span class="smallText">By clicking the "Next" button, you agree to creating a free account, and to <a href="#" class="input-sign-in">Terms of Service</a> and <a href="#" class="input-sign-in">Privacy Policy.</a></span>
                     </form> 
                 </section>
             </section>
             <section class="side">
-                <h1>Dummy Heading</h1>
-                <p>Lorem insum dolor sit amet, consectetur adpiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                <section class="text">
+                    <h1>Dummy Heading</h1>
+                    <p>Lorem insum dolor sit amet, consectetur adpiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                </section>
             </section>
         </main>
     </div>
